# 23-thesis-detext

./: .gitignore  .swiftlint.yml  LICENSE  MODULE.bazel  README.md  WORKSPACE  sonar-project.properties
DeTeXt.xcodeproj/: project.pbxproj
DeTeXt.xcworkspace/: contents.xcworkspacedata
DeTeXt/DeTeXt.xcodeproj/: project.pbxproj
DeTeXt/DeTeXt.xcodeproj/xcshareddata/xcschemes/: iOS.xcscheme
DeTeXt/Resources/: symbols.json
DeTeXt/Shared/: DeTeXtApp.swift  PKCanvas.swift  RowView.swift  SymbolDetailsView.swift  utilityFunctions.swift
DeTeXt/Shared/Extensions/: View+onTapGestureWithSoundAndHoverEffect.swift
DeTeXt/iOS/: CanvasView.swift  MainView.swift  SearchView.swift
DeTeXt/macOS/: TwoColumnMainView.swift
Resources/: symbols.json
Shared/: ImageHelpers.swift  LoadSymbols.swift  utilityFunctions.swift
iOS/: AboutView.swift  SymbolPreviewView.swift
scripts/: swiftlint.sh
swiftlint_extra_rules/: BUILD  ForbiddenVarRule.swift
