module(
    name = "thesis-detext",
    version = "0.0.0",
    compatibility_level = 1,
    repo_name = "thesis-detext",
)

bazel_dep(name = "swiftlint", version = "0.52.2", repo_name = "SwiftLint")

extra_rules = use_extension("@SwiftLint//bazel:extensions.bzl", "extra_rules")
extra_rules.setup(srcs = "@thesis-detext//swiftlint_extra_rules:extra_rules")

bazel_dep(name = "rules_xcodeproj", version = "1.5.1")